fix: improve contrast on navbar active and hover items

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -20,7 +20,7 @@
 :root {
     --clr-neutral-900: hsl(0, 0%, 30%);
     --clr-neutral-100: hsl(0, 0%, 100%);
-    --clr-accent-400: #a988db;
+    --clr-accent-400: #D5BEF8;
 
     --gradient: linear-gradient(90deg, #cdf7b8, #b0e6f2, #cac0fc, #e3c0f6, #f6bab0, #faeba8)
 }
@@ -119,9 +119,7 @@ h2 {
     }
     .nav-link:hover,
     .nav-item .active {
-        color: var(--clr-neutral-100);
-        font-weight: 500;
-        text-shadow: 1px 1px 2px rgb(59, 59, 59);
+        color: black;
         background: var(--clr-accent-400);
         border-radius: 7%;
     }
